<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".ui.RegisterUserActivity">


  <data>
    <import type="com.orlov_prokhor.weathers_of_cities.ui.RegisterUserActivity"/>
    <variable
      name="viewModel"
      type="com.orlov_prokhor.weathers_of_cities.ui.RegisterUserActivityModel"/>
  </data>
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.constraint.ConstraintLayout
      android:id="@+id/parent"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <TextView
        android:id="@+id/nameLabel"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent"/>

      <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"


        android:inputType="textEmailAddress"
        android:text="@={viewModel.registerUser.name}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel"/>


      <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        />

      <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"


        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@={viewModel.registerUser.userName}"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/userNameLabel"/>

      <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName"/>
      <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@={viewModel.registerUser.password}"

        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"/>


      <TextView
        android:id="@+id/passwordConfirmationLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/password_confirmation"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"/>
      <EditText
        android:id="@+id/passwordConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@={viewModel.registerUser.passwordConfirmation}"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordConfirmationLabel"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmationLabel"/>

      <TextView
        android:id="@+id/statusLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="false"
        android:text="@{viewModel.status}"
        app:layout_constraintEnd_toEndOf="@+id/passwordConfirmation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordConfirmation"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmation"/>
      <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="@{viewModel.enableRegister}"
        android:onClick="@{(v)-> viewModel.registerUserAndShowMainActivity(v,(RegisterUserActivity)context)}"
        android:text="@string/register_user"
        app:layout_constraintEnd_toEndOf="@+id/statusLabel"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="@+id/statusLabel"
        app:layout_constraintTop_toBottomOf="@+id/statusLabel"/>
    </android.support.constraint.ConstraintLayout>
  </ScrollView>
</layout>